--- a/notebooks/volatility_breakout.ipynb
+++ b/notebooks/volatility_breakout.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1097,
+   "execution_count": 1244,
    "id": "662486a7",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1098,
+   "execution_count": 1245,
    "id": "093de2dd",
    "metadata": {},
    "outputs": [],
@@ -51,8 +51,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7493d44",
+   "metadata": {},
+   "source": [
+    "### System Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1099,
+   "execution_count": 1246,
    "id": "ef29ca2f",
    "metadata": {},
    "outputs": [],
@@ -67,21 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1100,
+   "execution_count": 1247,
    "id": "93740eef",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
     "INITIAL_CAPITAL = 10000         # Initial capital in PLN\n",
-    "ATR_FAST = 2                # number of sessions for fast ATR calculation\n",
-    "ATR_SLOW = 14                # number of sessions for slow ATR calculation\n",
-    "SIGNAL_ADJ = 0.4                # adjustment of fast ATR signal (default=0.4)\n",
+    "ATR_SHORT = 2                   # number of sessions for fast ATR calculation\n",
+    "ATR_LONG = 14                   # number of sessions for slow ATR calculation\n",
+    "SIGNAL_ADJ = 0.4                # adjustment of ATR signal (default=0.4)\n",
     "RISK_PERCENT = 0.04             # risk per trade\n",
     "POINT_VALUE = 20                # 20 PLN per point\n",
-    "COMMISSION_PER_CONTRACT = 8.5   # PLN per round trip per contract\n",
-    "MIN_SIZE = 1\n",
-    "MAX_SIZE = 100"
+    "COMMISSION_PER_CONTRACT = 8.5   # PLN per ontract\n",
+    "MIN_SIZE = 1                    # minumum number of contracts\n",
+    "MAX_SIZE = 100                  # maximum number of contracts"
    ]
   },
   {
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1101,
+   "execution_count": 1248,
    "id": "6babd253",
    "metadata": {},
    "outputs": [],
@@ -105,8 +113,8 @@
     "df['H-PC'] = abs(df['High'] - df['Prev_Close']).astype(int)\n",
     "df['L-PC'] = abs(df['Low'] - df['Prev_Close']).astype(int)\n",
     "df['TR'] = df[['H-L', 'H-PC', 'L-PC']].max(axis=1)\n",
-    "df['ATR_short'] = df['TR'].rolling(window=ATR_FAST).mean()\n",
-    "df['ATR_long'] = df['TR'].rolling(window=ATR_SLOW).mean()"
+    "df['ATR_short'] = df['TR'].rolling(window=ATR_SHORT).mean()\n",
+    "df['ATR_long'] = df['TR'].rolling(window=ATR_LONG).mean()"
    ]
   },
   {
@@ -119,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1102,
+   "execution_count": 1249,
    "id": "4dd6a87d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate signals\n",
+    "# Calculate buy and sell levels\n",
     "df['Signal'] = (df['ATR_short'] * SIGNAL_ADJ).bfill().astype(int)\n",
     "df['Buy_Level'] = (df['Open'] + df['Signal'].shift(1)).astype(float)\n",
     "df['Sell_Level'] = (df['Open'] - df['Signal'].shift(1)).astype(float)\n",
@@ -135,38 +143,37 @@
     "\n",
     "# --- Simulate Trades ---\n",
     "# Initialize position: 1 = long, -1 = short, 0 = flat\n",
-    "position = []\n",
-    "entry_price = []\n",
-    "current_pos = 0  # 1 = long, -1 = short, 0 = flat\n",
-    "last_entry = np.nan\n",
+    "positions = []\n",
+    "entry_prices = []\n",
+    "current_position = 0  # Current position: 1 = long, -1 = short, 0 = flat\n",
+    "entry_price = np.nan\n",
     "\n",
-    "for i in range(len(df)):\n",
-    "    long_signal = df['Long_Entry'].iloc[i]\n",
-    "    short_signal = df['Short_Entry'].iloc[i]\n",
+    "for row in df.itertuples():\n",
     "\n",
-    "    if current_pos == 0:\n",
-    "        if long_signal:\n",
-    "            current_pos = 1\n",
-    "            last_entry = df['Buy_Level'].iloc[i]\n",
-    "        elif short_signal:\n",
-    "            current_pos = -1\n",
-    "            last_entry = df['Sell_Level'].iloc[i]\n",
+    "    # Open a new position\n",
+    "    if current_position == 0: \n",
+    "        if row.Long_Entry:\n",
+    "            current_position = 1\n",
+    "            entry_price = row.Buy_Level\n",
+    "        elif row.Short_Entry:\n",
+    "            current_position = -1\n",
+    "            entry_price = row.Sell_Level\n",
     "\n",
-    "    elif current_pos == 1:\n",
-    "        if short_signal:\n",
-    "            current_pos = -1\n",
-    "            last_entry = df['Sell_Level'].iloc[i]\n",
+    "    # Flip long to short\n",
+    "    elif current_position == 1 and row.Short_Entry: \n",
+    "        current_position = -1\n",
+    "        entry_price = row.Sell_Level\n",
     "\n",
-    "    elif current_pos == -1:\n",
-    "        if long_signal:\n",
-    "            current_pos = 1\n",
-    "            last_entry = df['Buy_Level'].iloc[i]\n",
+    "    # Flip short to long\n",
+    "    elif current_position == -1 and row.Long_Entry: \n",
+    "        current_position = 1\n",
+    "        entry_price = row.Buy_Level\n",
     "\n",
-    "    position.append(current_pos)\n",
-    "    entry_price.append(last_entry)\n",
+    "    positions.append(current_position)\n",
+    "    entry_prices.append(entry_price)\n",
     "\n",
-    "df['Position'] = position\n",
-    "df['Entry_Price'] = entry_price"
+    "df['Position'] = positions\n",
+    "df['Entry_Price'] = entry_prices"
    ]
   },
   {
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1103,
+   "execution_count": null,
    "id": "c60375ea",
    "metadata": {},
    "outputs": [],
@@ -192,23 +199,25 @@
     "\n",
     "capital = INITIAL_CAPITAL\n",
     "capital_list = [capital]\n",
-    "commission_list = []\n",
     "size_list = [np.nan]\n",
     "\n",
-    "risk_per_contract_list = []\n",
-    "risk_amount_list = []\n",
+    "# risk_per_contract_list = []\n",
+    "# risk_amount_list = []\n",
     "\n",
     "# Loop through rows\n",
     "for i in range(1, len(df)):\n",
-    "    prev_pos = df['Position'].iloc[i - 1]\n",
-    "    curr_pos = df['Position'].iloc[i]\n",
-    "    curr_close = df['Close'].iloc[i]\n",
-    "    prev_close = df['Close'].iloc[i - 1]\n",
-    "    entry_price = df['Entry_Price'].iloc[i]\n",
     "\n",
+    "    row = df.iloc[i]\n",
+    "    prev_row = df.iloc[i - 1]\n",
+    "\n",
+    "    curr_pos = row['Position']\n",
+    "    prev_pos = prev_row['Position']    \n",
+    "    curr_close = row['Close']\n",
+    "    prev_close = prev_row['Close']\n",
+    "    entry_price = row['Entry_Price']\n",
+    "    atr = row['ATR_long']\n",
     "\n",
     "    # Calculate risk per contract based on ATR\n",
-    "    atr = df['ATR_long'].iloc[i]\n",
     "    risk_per_contract = atr * POINT_VALUE if pd.notna(atr) and atr > 0 else np.nan\n",
     "\n",
     "    if pd.notna(risk_per_contract) and risk_per_contract > 0:\n",
@@ -218,7 +227,7 @@
     "    else:\n",
     "        size = MIN_SIZE  # No trade if ATR is missing or zero\n",
     "\n",
-    "     # Case 1: Position flipped (e.g. Long → Short or Short → Long)\n",
+    "    # Case 1: Position flipped (e.g. Long → Short or Short → Long)\n",
     "    if curr_pos != prev_pos and prev_pos != 0 and curr_pos != 0:\n",
     "        daily_pts = ((entry_price - prev_close) * prev_pos) + ((curr_close - entry_price) * curr_pos)\n",
     "        commission = (COMMISSION_PER_CONTRACT * size) * 2\n",
@@ -265,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1104,
+   "execution_count": 1251,
    "id": "66f30bd8",
    "metadata": {},
    "outputs": [
@@ -289,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1105,
+   "execution_count": 1252,
    "id": "d92f55d2",
    "metadata": {},
    "outputs": [
@@ -918,7 +927,7 @@
        "2022-01-31   -1714.0     -0.141343  "
       ]
      },
-     "execution_count": 1105,
+     "execution_count": 1252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1106,
+   "execution_count": 1253,
    "id": "e3efc065",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1567,7 @@
        "2025-10-06  -13172.0     -0.174926  "
       ]
      },
-     "execution_count": 1106,
+     "execution_count": 1253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1577,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1107,
+   "execution_count": 1254,
    "id": "e2fe2e2e",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1108,
+   "execution_count": 1255,
    "id": "6d1a275f",
    "metadata": {},
    "outputs": [
@@ -1618,9 +1627,9 @@
    "source": [
     "plt.figure(figsize=(12, 6))\n",
     "# Plot ATR_long\n",
-    "df['ATR_long'].plot(label=f\"ATR({ATR_SLOW})\", color='purple')\n",
+    "df['ATR_long'].plot(label=f\"ATR({ATR_LONG})\", color='purple')\n",
     "# Plot ATR_fast\n",
-    "df['ATR_short'].plot(label=f\"ATR({ATR_FAST})\", color='orange')\n",
+    "df['ATR_short'].plot(label=f\"ATR({ATR_SHORT})\", color='orange')\n",
     "# Add labels and legend\n",
     "plt.title(\"Volatility\")\n",
     "plt.ylabel(\"Average True Range (in Points)\")\n",
@@ -1631,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1109,
+   "execution_count": 1256,
    "id": "6150e41c",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1110,
+   "execution_count": 1257,
    "id": "288edc1e",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1679,7 @@
        "Name: Daily_Pts, dtype: float64"
       ]
      },
-     "execution_count": 1110,
+     "execution_count": 1257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1111,
+   "execution_count": 1258,
    "id": "defdeb2c",
    "metadata": {},
    "outputs": [
@@ -1691,7 +1700,7 @@
        "Text(0, 0.5, 'Cumulative Points')"
       ]
      },
-     "execution_count": 1111,
+     "execution_count": 1258,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1713,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1125,
+   "execution_count": 1259,
    "id": "3cc5e07d",
    "metadata": {},
    "outputs": [
@@ -1736,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1113,
+   "execution_count": 1260,
    "id": "40645e11",
    "metadata": {},
    "outputs": [
@@ -1759,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1114,
+   "execution_count": 1261,
    "id": "f5f8efae",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1115,
+   "execution_count": 1262,
    "id": "b26f6632",
    "metadata": {},
    "outputs": [
@@ -1813,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1116,
+   "execution_count": 1263,
    "id": "4b1e598c",
    "metadata": {},
    "outputs": [],
@@ -1866,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1117,
+   "execution_count": 1264,
    "id": "14f6dd12",
    "metadata": {},
    "outputs": [],
@@ -1876,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1118,
+   "execution_count": 1265,
    "id": "11c581e3",
    "metadata": {},
    "outputs": [],
@@ -1936,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1119,
+   "execution_count": 1266,
    "id": "49f7b398",
    "metadata": {},
    "outputs": [],
@@ -1962,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1120,
+   "execution_count": 1267,
    "id": "7e41aa9f",
    "metadata": {},
    "outputs": [
@@ -2023,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1121,
+   "execution_count": 1268,
    "id": "0480f718",
    "metadata": {},
    "outputs": [
@@ -2044,7 +2053,7 @@
        "Name: 397, dtype: object"
       ]
      },
-     "execution_count": 1121,
+     "execution_count": 1268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1122,
+   "execution_count": 1269,
    "id": "01255a19",
    "metadata": {},
    "outputs": [
@@ -2077,7 +2086,7 @@
        "Name: 408, dtype: object"
       ]
      },
-     "execution_count": 1122,
+     "execution_count": 1269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1123,
+   "execution_count": 1270,
    "id": "33122a1d",
    "metadata": {},
    "outputs": [
@@ -2116,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1124,
+   "execution_count": 1271,
    "id": "e25ee428",
    "metadata": {},
    "outputs": [
@@ -2138,7 +2147,7 @@
        "Name: 2025-10-06 00:00:00, dtype: float64"
       ]
      },
-     "execution_count": 1124,
+     "execution_count": 1271,
      "metadata": {},
      "output_type": "execute_result"
     }
