--- a/notebooks/volatility_breakout.ipynb
+++ b/notebooks/volatility_breakout.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1244,
+   "execution_count": 1356,
    "id": "662486a7",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1245,
+   "execution_count": 1357,
    "id": "093de2dd",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1246,
+   "execution_count": 1358,
    "id": "ef29ca2f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1247,
+   "execution_count": 1359,
    "id": "93740eef",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1248,
+   "execution_count": 1360,
    "id": "6babd253",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1249,
+   "execution_count": 1361,
    "id": "4dd6a87d",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1362,
    "id": "c60375ea",
    "metadata": {},
    "outputs": [],
@@ -216,6 +216,7 @@
     "    prev_close = prev_row['Close']\n",
     "    entry_price = row['Entry_Price']\n",
     "    atr = row['ATR_long']\n",
+    "    idx = df.index[i]\n",
     "\n",
     "    # Calculate risk per contract based on ATR\n",
     "    risk_per_contract = atr * POINT_VALUE if pd.notna(atr) and atr > 0 else np.nan\n",
@@ -251,13 +252,13 @@
     "    capital += net_daily_pnl\n",
     "\n",
     "    # Save results\n",
-    "    df.at[df.index[i], 'Daily_Pts'] = daily_pts\n",
-    "    df.at[df.index[i], 'Position_Size'] = size\n",
-    "    df.at[df.index[i], 'Commission'] = commission\n",
-    "    df.at[df.index[i], 'Capital'] = capital\n",
+    "    df.at[idx, 'Daily_Pts'] = daily_pts\n",
+    "    df.at[idx, 'Position_Size'] = size\n",
+    "    df.at[idx, 'Commission'] = commission\n",
+    "    df.at[idx, 'Capital'] = capital\n",
     "\n",
-    "    # df.at[df.index[i], 'Risk_per_contract'] = risk_per_contract\n",
-    "    # df.at[df.index[i], 'Risk_amount'] = risk_amount\n",
+    "    # df.at[idx, 'Risk_per_contract'] = risk_per_contract\n",
+    "    # df.at[idx, 'Risk_amount'] = risk_amount\n",
     "\n",
     "    capital_list.append(capital)\n",
     "    size_list.append(size)    \n",
@@ -274,31 +275,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1251,
+   "execution_count": 1363,
    "id": "66f30bd8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max Drawdown: -15876.0, Max Drawdown %: -0.24310394590359954\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- Calculate Drawdown ---\n",
     "df['Capital_Hwm'] = df['Capital'].cummax()\n",
     "df['Drawdown'] = df['Capital'] - df['Capital_Hwm']\n",
-    "df['Drawdown_Pct'] = df['Drawdown'] / df['Capital_Hwm'].replace(0, np.nan)\n",
-    "max_drawdown = df['Drawdown'].min()\n",
-    "max_drawdown_pct = df['Drawdown_Pct'].min()\n",
-    "print(f\"Max Drawdown: {max_drawdown}, Max Drawdown %: {max_drawdown_pct}\")"
+    "df['Drawdown_Pct'] = df['Drawdown'] / df['Capital_Hwm'].replace(0, np.nan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1252,
+   "execution_count": 1364,
    "id": "d92f55d2",
    "metadata": {},
    "outputs": [
@@ -927,7 +917,7 @@
        "2022-01-31   -1714.0     -0.141343  "
       ]
      },
-     "execution_count": 1252,
+     "execution_count": 1364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1253,
+   "execution_count": 1365,
    "id": "e3efc065",
    "metadata": {},
    "outputs": [
@@ -1567,7 +1557,7 @@
        "2025-10-06  -13172.0     -0.174926  "
       ]
      },
-     "execution_count": 1253,
+     "execution_count": 1365,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1586,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1254,
+   "execution_count": 1366,
    "id": "e2fe2e2e",
    "metadata": {},
    "outputs": [
@@ -1609,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1255,
+   "execution_count": 1367,
    "id": "6d1a275f",
    "metadata": {},
    "outputs": [
@@ -1640,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1256,
+   "execution_count": 1368,
    "id": "6150e41c",
    "metadata": {},
    "outputs": [
@@ -1664,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1257,
+   "execution_count": 1369,
    "id": "288edc1e",
    "metadata": {},
    "outputs": [
@@ -1679,7 +1669,7 @@
        "Name: Daily_Pts, dtype: float64"
       ]
      },
-     "execution_count": 1257,
+     "execution_count": 1369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1258,
+   "execution_count": 1370,
    "id": "defdeb2c",
    "metadata": {},
    "outputs": [
@@ -1700,7 +1690,7 @@
        "Text(0, 0.5, 'Cumulative Points')"
       ]
      },
-     "execution_count": 1258,
+     "execution_count": 1370,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1722,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1259,
+   "execution_count": 1371,
    "id": "3cc5e07d",
    "metadata": {},
    "outputs": [
@@ -1745,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1260,
+   "execution_count": 1372,
    "id": "40645e11",
    "metadata": {},
    "outputs": [
@@ -1768,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1261,
+   "execution_count": 1373,
    "id": "f5f8efae",
    "metadata": {},
    "outputs": [
@@ -1791,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1262,
+   "execution_count": 1374,
    "id": "b26f6632",
    "metadata": {},
    "outputs": [
@@ -1822,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1263,
+   "execution_count": 1375,
    "id": "4b1e598c",
    "metadata": {},
    "outputs": [],
@@ -1875,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1264,
+   "execution_count": 1376,
    "id": "14f6dd12",
    "metadata": {},
    "outputs": [],
@@ -1885,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1265,
+   "execution_count": 1377,
    "id": "11c581e3",
    "metadata": {},
    "outputs": [],
@@ -1945,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1266,
+   "execution_count": 1378,
    "id": "49f7b398",
    "metadata": {},
    "outputs": [],
@@ -1971,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1267,
+   "execution_count": 1379,
    "id": "7e41aa9f",
    "metadata": {},
    "outputs": [
@@ -1979,8 +1969,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start date:  2022-01-01\n",
-      "End date: 2025-12-31\n",
+      "Start date:  2022-01-03 00:00:00\n",
+      "End date: 2025-10-06 00:00:00\n",
       "-------------------\n",
       "Total Trades: 459\n",
       "Profitable Trades: 222\n",
@@ -2006,8 +1996,8 @@
    ],
    "source": [
     "# Print results\n",
-    "print(\"Start date: \", START_DATE)\n",
-    "print(\"End date:\", END_DATE)\n",
+    "print(\"Start date: \", df.index[0])\n",
+    "print(\"End date:\", df.index[-1])\n",
     "print(\"-------------------\")\n",
     "print(\"Total Trades:\", total_trades)\n",
     "print(\"Profitable Trades:\", no_profitable_trades)\n",
@@ -2032,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1268,
+   "execution_count": 1380,
    "id": "0480f718",
    "metadata": {},
    "outputs": [
@@ -2053,7 +2043,7 @@
        "Name: 397, dtype: object"
       ]
      },
-     "execution_count": 1268,
+     "execution_count": 1380,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1269,
+   "execution_count": 1381,
    "id": "01255a19",
    "metadata": {},
    "outputs": [
@@ -2086,7 +2076,7 @@
        "Name: 408, dtype: object"
       ]
      },
-     "execution_count": 1269,
+     "execution_count": 1381,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2098,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1270,
+   "execution_count": 1382,
    "id": "33122a1d",
    "metadata": {},
    "outputs": [
@@ -2125,7 +2115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1271,
+   "execution_count": 1383,
    "id": "e25ee428",
    "metadata": {},
    "outputs": [
@@ -2147,7 +2137,7 @@
        "Name: 2025-10-06 00:00:00, dtype: float64"
       ]
      },
-     "execution_count": 1271,
+     "execution_count": 1383,
      "metadata": {},
      "output_type": "execute_result"
     }
